5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1578_1333.log
== SUBMITION (2019-03-13 09:28:09) 
-- CODE:
expressao = 
print(29.88)
-- EXECUTION TIME:
0.126269
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:28:20) 
-- CODE:
expressao = 
print(round(29.88))
-- EXECUTION TIME:
0.14594
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:28:58) 
-- CODE:
expressao = 
print(29.88)
-- EXECUTION TIME:
0.127509
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:29:08) 
-- CODE:
expressao = 
print(29.89)
-- EXECUTION TIME:
0.182606
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:29:57) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(29.89)
-- EXECUTION TIME:
0.204718
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
29.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:30:13) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(29.89)
-- EXECUTION TIME:
0.134802
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
29.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:30:38) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(29.89)
-- EXECUTION TIME:
0.163818
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
29.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:31:18) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(29.89)
-- EXECUTION TIME:
0.226586
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:31:23) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(29.89)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:35:05) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(110.250)
-- EXECUTION TIME:
0.200407
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:35:20) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(roound(110.250))
-- EXECUTION TIME:
0.195089
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:35:24) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(roound(110.25))
-- EXECUTION TIME:
0.211576
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:35:32) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(110.25)
-- EXECUTION TIME:
0.169724
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:34:43) 
-- CODE:
expressao = 30–(3 ** 2) + (8 // 3 ** 2) * 10))
print()
-- EXECUTION TIME:
0.185816
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30\u2013(3 ** 2) + (8 // 3 ** 2) * 10))
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:35:03) 
-- CODE:
expressao = 30–(3 ** 2) + (8 // 3 ** 2) * 10))
print(expressao)
-- EXECUTION TIME:
0.136586
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30\u2013(3 ** 2) + (8 // 3 ** 2) * 10))
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:35:40) 
-- CODE:
expressao = 30–(3**2)+(8//((3**2)*10))
print(expressao)
-- EXECUTION TIME:
0.129878
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30\u2013(3**2)+(8//((3**2)*10))
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:36:46) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(expressao)
-- EXECUTION TIME:
0.141285
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:37:53) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(21.08)
-- EXECUTION TIME:
0.147774
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:38:00) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(21.0)
-- EXECUTION TIME:
0.249759
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:38:52) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(30–(3**2)+(8//((3**2)*10)))
-- EXECUTION TIME:
0.15133
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:39:06) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(21)
-- EXECUTION TIME:
0.162536
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:39:21) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round 21)
-- EXECUTION TIME:
0.134055
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:39:29) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round (21)
-- EXECUTION TIME:
0.131504
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:39:34) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round (21))
-- EXECUTION TIME:
0.145622
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:39:44) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(21)
-- EXECUTION TIME:
0.156879
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:40:04) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(21.89)
-- EXECUTION TIME:
0.192742
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:40:14) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(21.089)
-- EXECUTION TIME:
0.150987
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:40:21) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round 21.089)
-- EXECUTION TIME:
0.118183
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:40:27) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round (21.089)
-- EXECUTION TIME:
0.210449
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:41:36) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round (168/2), 21)
-- EXECUTION TIME:
0.14529
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:41:46) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round (168/2),21)
-- EXECUTION TIME:
0.130892
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:42:03) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round((168/2),21)
-- EXECUTION TIME:
0.145177
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:42:16) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round((168/8),21)
-- EXECUTION TIME:
0.169413
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:42:21) 
-- CODE:
expressao =30–(3**2)+(8//((3**2)*10))
print(round((168/8),21)
-- EXECUTION TIME:
0.190695
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u2013(3**2)+(8//((3**2)*10))
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:43:48) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30–(3**2)+(8//((3**2)*10))
-- EXECUTION TIME:
0.173557
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:44:06) 
-- CODE:
expressao =30–3**2+8//3**2*10
print(30–(3**2)+(8//((3**2)*10))
-- EXECUTION TIME:
0.157557
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u20133**2+8//3**2*10
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:44:14) 
-- CODE:
expressao =30–3**2+8//3**2*10
print((30–(3**2)+(8//((3**2)*10)))
-- EXECUTION TIME:
0.152024
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u20133**2+8//3**2*10
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:44:18) 
-- CODE:
expressao =30–3**2+8//3**2*10
print((30–(3**2)+(8//((3**2)*10))
-- EXECUTION TIME:
0.133562
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30\u20133**2+8//3**2*10
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:45:15) 
-- CODE:
expressao =(30–(3**2)+(8//((3**2)*10))
print(30–(9)+(8//((9)*10))
-- EXECUTION TIME:
0.147379
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =(30\u2013(3**2)+(8//((3**2)*10))
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:47:41) 
-- CODE:
expressao =(30–(3**2)+(8//((3**2)*10))
print(32.25)
				  11.25
				  
-- EXECUTION TIME:
0.164104
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =(30\u2013(3**2)+(8//((3**2)*10))
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:47:44) 
-- CODE:
expressao =(30–(3**2)+(8//((3**2)*10))
print(32.25)
				  11.25
				  
-- EXECUTION TIME:
0.135994
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =(30\u2013(3**2)+(8//((3**2)*10))
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:47:59) 
-- CODE:
expressao =(30–(3**2)+(8//((3**2)*10))
print(32.25)
				  
				  
-- EXECUTION TIME:
0.140877
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =(30\u2013(3**2)+(8//((3**2)*10))
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:48:05) 
-- CODE:
expressao =(30–(3**2)+(8//((3**2)*10))
print(32.25)			  
-- EXECUTION TIME:
0.199944
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =(30\u2013(3**2)+(8//((3**2)*10))
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:48:39) 
-- CODE:
expressao =(30–(3**2)+(8//((3**2)*10))
print((30–(3**2)+(8//((3**2)*10)))			  
-- EXECUTION TIME:
0.156639
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =(30\u2013(3**2)+(8//((3**2)*10))
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:48:55) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print((30–(3**2)+(8//((3**2)*10)))			  
-- EXECUTION TIME:
0.211829
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:49:03) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30–(3**2)+(8//((3**2)*10)))			  
-- EXECUTION TIME:
0.134564
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:49:09) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30–(3**2)+(8//((3**2)*10))
-- EXECUTION TIME:
0.136126
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:49:21) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30–(3**2)+(8//((3**2)*10))
-- EXECUTION TIME:
0.193765
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:49:27) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30–(3**2))+(8//((3**2)*10))
-- EXECUTION TIME:
0.192412
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:56:56) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:58:35) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:58:55) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:59:58) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print("expressao")
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:08:05) 
-- CODE:
expressao = 30–3**2+8//3**2*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30–3**2+8//3**2*10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:08:15) 
-- CODE:
expressao =30–3**2+8//3**2*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao =30–3**2+8//3**2*10
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:09:58) 
-- CODE:
expressao =30–3**2+8//3**2*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao =30–3**2+8//3**2*10
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:10:24) 
-- CODE:
expressao =30-3**2+8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.134517
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:12:21) 
-- CODE:
expressao =30-3**2+8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.157125
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:28:14) 
-- CODE:
expressao =30-3**2+8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.191292
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:28:50) 
-- CODE:
expressao =30-3**2+8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.140864
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:47:59) 
-- CODE:
expressao =30-3**2+8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.120495
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
